--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
