--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "19.2.1"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
